# OpenNord

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/workflows/: build.yml
cmake/: InstallMinGWRuntime.cmake.in  mingw-w64.cmake
docs/: ARCHITECTURE.md
installer/: OpenNord.nsi
resources/: opennord.exe.manifest  opennord.rc
src/api/: NordApiClient.cpp  NordApiClient.h  ResponseVerifier.cpp  ResponseVerifier.h
src/common/: Logging.cpp  Logging.h  Models.cpp  Models.h  OpenVpnConfig.cpp  OpenVpnConfig.h  Protocol.cpp  Protocol.h  WireGuardConfig.cpp  WireGuardConfig.h
src/gui/: MainWindow.cpp  MainWindow.h  RpcClient.cpp  RpcClient.h  main.cpp
src/service/: ClientContext.h  NamedPipeServer.cpp  NamedPipeServer.h  OpenVpnTunnel.cpp  OpenVpnTunnel.h  SecureStore.cpp  SecureStore.h  ServiceMain.cpp  VpnController.cpp  VpnController.h  WindowsService.cpp  WindowsService.h  WireGuardTunnel.cpp  WireGuardTunnel.h
src/windows/: Security.cpp  Security.h  WinHandle.h
tests/: CommonTests.cpp
